[package]
name = "async-cffi-test-utils"
version = "0.1.0"
edition = "2024"

[lib]
name = "async_cffi_test_utils"
crate-type = ["cdylib"]

[dependencies]
async-cffi = { path = "../async-cffi" }
futures = "0.3.31"

[dev-dependencies]
serial_test = "3.2.0"

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread"]
