[package]
name = "async-cffi"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Async/await compatible cffi scheme."
repository = "https://github.com/weirdev/async-cffi"
readme = "README.md"
keywords = ["ffi", "cffi", "async", "await"]
categories = ["development-tools::ffi"]

[lib]
name = "async_cffi"
crate-type = ["rlib"]

[dependencies]
futures = "0.3.31"

[dev-dependencies]
serial_test = "3.2.0"

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread"]
